# chimera_pe

./: .appveyor.yml  CMakeLists.txt  README.md
chimera_pe/: CMakeLists.txt  README.md  process_util.h  resource.aps  resource.rc
chimera_pe/peloader/: inject_pe.h  load_imports.cpp  pe_hdrs_helper.cpp  pe_hdrs_helper.h  relocate.h
chimera_pe/src/: CMakeLists.txt  enumproc.h  inject_pe.h  load_imports.h  main.cpp  pe_hdrs_helper.cpp  pe_raw_to_virtual.h  process_util.cpp  process_util.h  relocate.h  resource.h  run.bat  sysutil.cpp  sysutil.h  target_util.cpp  target_util.h
chimera_pe/src/peloader/: inject_pe.cpp  load_imports.cpp  load_imports.h  pe_raw_to_virtual.cpp  pe_raw_to_virtual.h  relocate.cpp
chimera_pe_payload_template/: CMakeLists.txt  README.md
chimera_pe_payload_template/src/: main.cpp
chimera_pe_payload_template/src/reflective/: reflective_imports_load.h
